fixed pager not showing. layout saved notifications is now showing red.
--HG--
branch : newuserinterface

--- a/app/themes/default/css/newui.less
+++ b/app/themes/default/css/newui.less
@@ -2213,7 +2213,7 @@ div.hasHalfs{
         	
         }
         #list-view-endless-page{
-        	display:none;
+        	//display:none;
         }
     }
 
